--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You are Loved</title>
+    <title>Connecting</title>
     <style>
         /* Import DepartureMono font */
         @font-face {
@@ -22,26 +22,30 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            justify-content: center;
             align-items: center;
+            justify-content: flex-start; /* Changed from center */
         }
 
         .header {
             background-color: #cf77a4;
             color: white;
             height: 70px; /* ust as needed: half the previous height */
+            width: 100%;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             text-transform: uppercase;
             font-weight: bold;
-            width: 100%;
             overflow: hidden;
         }
         
         .header h1 {
             margin: 0;
             font-size: 24px; /* ust font size if needed */
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .header a {
@@ -55,10 +59,11 @@
             flex-direction: column;
             width: 90%;
             max-width: 1000px;
-            margin: 0 auto;
+            margin: 20px auto;
             padding: 20px;
             background-color: #ffffff;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            flex: 1;
         }
 
         @media (min-width: 768px) {
@@ -198,7 +203,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href=""https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
+            <a href="https://damarisguzman.neocities.org/about" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
@@ -218,13 +223,13 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damaris-guzman.github.io/portfolio/newmaris.html">
+          <a href="https://damarisguzman.neocities.org/newmaris">
             <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="More Media">
             <div class="overlay-text">New Media</div>
           </a>
         </div>
         <div class="grid-item">
-           <a href="https://damaris-guzman.github.io/portfolio/video.html">
+           <a href="https://damarisguzman.neocities.org/video">
             <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
             <div class="overlay-text">Video Editing</div>
            </a>
@@ -236,7 +241,7 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href=""https://damaris-guzman.github.io/portfolio/archive.html">
+          <a href="https://damarisguzman.neocities.org/archive">
             <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Archive">
             <div class="overlay-text">Archive</div>
           </a>
