--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href="https://damarisguzman.neocities.org/about" class="gradient-button">
+            <a href="https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
@@ -211,7 +211,7 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <a href="currently.html">
+            <a href="https://damaris-guzman.github.io/portfolio/currently.html">
                 <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Current Projects">
                 <div class="overlay-text">Current Project/s</div>
             </a>
@@ -223,25 +223,25 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damarisguzman.neocities.org/newmaris">
+          <a href="https://damaris-guzman.github.io/portfolio/newmaris.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="More Media">
             <div class="overlay-text">New Media</div>
           </a>
         </div>
         <div class="grid-item">
-           <a href="https://damarisguzman.neocities.org/video">
+           <a href="https://damaris-guzman.github.io/portfolio/video.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
             <div class="overlay-text">Video Editing</div>
            </a>
         </div>
         <div class="grid-item">
-          <a href="3danimation.html"> 
+          <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"> 
             <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="3D Animation">
             <div class="overlay-text">3D Animation</div>
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damarisguzman.neocities.org/archive">
+          <a href="https://damaris-guzman.github.io/portfolio/archive.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Archive">
             <div class="overlay-text">Archive</div>
           </a>
