--- a/archive.html
+++ b/archive.html
@@ -204,11 +204,53 @@
     }
     /* Responsive Adjustments */
     @media (max-width: 768px) {
+      /* Header adjustments */
+      .header {
+        flex-direction: column;
+        padding: 10px;
+      }
+      .header h1 a {
+        font-size: 1.5rem;
+        letter-spacing: 2px;
+      }
+      .hamburger {
+        font-size: 1.5rem;
+      }
+      /* Reduce carousel paddings and gaps */
+      .shorts-container,
+      .netart-additional-container,
+      .fitpics-additional-container,
+      .instagram-additional-container {
+        padding: 0 10px !important;
+        gap: 5px !important;
+      }
+      /* Adjust YouTube iFrame sizes in the shorts grid */
+      .youtube-additional-container.shorts-container iframe {
+        width: 100% !important;
+        height: auto !important;
+      }
+      /* Scale down carousel items */
+      .netart-item,
+      .fitpics-item {
+        min-width: 150px;
+        height: 150px;
+      }
+      /* Films section: make video players smaller */
       .video-item .video-player {
         height: 215px;
       }
-      .video-item .text-box {
-        font-size: 13px;
+      /* Instagram blockquotes: scale down */
+      .instagram-carousel blockquote.instagram-media {
+        min-width: 140px;
+        height: 250px;
+      }
+      
+      /* Override fixed padding in main containers */
+      .main-content,
+      .secondary-section,
+      .films-container,
+      .instagram-carousel {
+        padding: 10px;
       }
     }
     /* Override the default height for Instagram video players */
@@ -319,14 +361,22 @@
         
     </div>
 </div>
-<!-- Glossy Social Media Buttons -->
-<div class="social-buttons">
+<!-- Social Buttons with Mobile Scroll Arrows -->
+<div class="social-buttons-wrapper" style="position: relative; overflow: hidden;">
+  <button class="social-prev" style="display: none; position: absolute; left: 0; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; padding: 5px; cursor: pointer;">
+    &#8249;
+  </button>
+  <div class="social-buttons" style="display: flex; gap: 15px; margin: 20px 15px; overflow-x: auto; scroll-behavior: smooth;">
     <a href="https://instagram.com/grill0101" class="social-button">@grill0101</a>
     <a href="https://instagram.com/grilledarchive" class="social-button">@grilledarchive</a>
     <a href="https://www.youtube.com/@grill0101" class="social-button">Youtube</a>
     <a href="https://www.youtube.com/@maris-4-life" class="social-button">2nd Youtube</a>
-<a href="https://soundcloud.com/grill0101/" class="social-button">Soundcloud</a>
+    <a href="https://soundcloud.com/grill0101/" class="social-button">Soundcloud</a>
   </div>
+  <button class="social-next" style="display: none; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; padding: 5px; cursor: pointer;">
+    &#8250;
+  </button>
+</div>
   <!-- Container for YouTube Shorts (first 4 videos) with carousel controls -->
 <div class="youtube-short-carousel" style="position: relative; overflow: hidden; padding: 20px;">
   <!-- Left Arrow -->
