--- a/about.html
+++ b/about.html
@@ -353,12 +353,38 @@
         <div class="profile-description">
             <h2></h2>
             <p>Hi, it's so nice to connect with you. ٩(◕‿◕｡)۶ </p>
-            <p>I'm a digital media artist pursuing my MFA in Digital Media Art at San Jose State University. My 3D animations and layered videos distort reality with immersive textures and high-energy, fast-paced edits to visualize the dopamine hits and instant gratification of social media and consumer culture. When I shift into a slower pace, I create meditative experiences that straddle the line between the biological (reminiscent of cells or tissues) and the synthetic, suggestive of polished chrome or silicone. These entrancing compositions invite prolonged viewing to appreciate subtle shifts in color and glimmering highlights, while remaining simultaneously sensual and slightly uncanny, evoking the sensation of peering into a viscous biological mass or a surreal, alien landscape.</p> 
+            <p>I create digital worlds that oscillate between the hyperactive and the meditative, asking what happens to identity and agency when pixels start to pulse like living tissue. As an MFA candidate and Teaching Associate at San José State University, I move across experimental video, 3D animation, digital fabrication, and Arduino-driven interfaces, threading them together into immersive, multi-sensory narratives.</p>
+            <p>I’m captivated by how digital media goes beyond mere entertainment, actively
+reconfiguring how we think, feel, and connect. My work explores the blurred boundaries between
+identity, agency, and community in our hyperconnected age. Using Blender and After Effects, I
+produce looped narratives that merge 3D animation with real-world footage, mirroring social
+media’s addictive feedback loops and examining how digital design can subtly shape behavior
+and perception.</p>
+<p>Influenced by posthumanist thought, I see technology as an extension of the body: a
+merging of biology and code that challenges our understanding of embodiment. These visual
+experiments serve as both personal reflections and broader social commentaries, questioning
+whether we’re steering technology or being steered, and whether our identities are truly ours or
+shaped by infinite feedback loops. I’m drawn to glossy, surreal aesthetics, often inspired by PC
+Music visual artists such as Timothy Luke, Daniel Swan, and Team Rolfes. Their visionary work
+blurs authenticity and artifice, reflecting my interest in the uneasy boundary between synthetic
+and organic forms.</p>
+<p>As my practice evolves, I’ve begun incorporating physical elements that coincide with my
+digital visuals, including custom, digitally fabricated and circuit-based interactivity.
+These additions introduce a tactile layer that bridges the virtual and physical realms.</p>
+<p>Despite the rush and sensory overload in many of my projects, I’m also invested in
+encouraging quiet introspection. I create meditative simulations as a counterpoint to the frenetic
+energy, slowing viewers down and encouraging them to drift into a more contemplative
+headspace. By balancing these two extremes (fast-paced, hyper-synthetic-reality versus a serene,
+dreamlike interlude) I reflect on how our external digital lives (scrolling, liking, posting)
+intertwine with our internal emotional states (yearning, comparing, questioning). In my view,
+self-expression meets external observation in the ways technology mediates everything we see,
+feel, and share.</p>
+<p>Ultimately, I strive to create resonant moments of awareness by building spaces that unify
+mind and body, digital and physical, in a shared journey of reflection and discovery. My hope is
+that people leave feeling both energized and unsettled, questioning their own habits and
+assumptions, and perhaps reclaiming a bit of agency in the process.</p>
             <p>Overall, my work centers around identity, perception, technological embodiment, and posthuman existence in an age of rapid technological consumption.</p>
-
-<p>My main practice is video art, where I create immersive, multi-sensory narratives.</p> 
-    <p>Currently, I'm transitioning to designing digitally fabricated and programmed interactive experiences, as well as audio-visuals for VJing.</p> 
-    <p>Every day I see my dream, so I invite you to see it too. </p>
+    <p>Every day I see my dream, so I invite you to see it too. ★~(◠‿◕✿)</p>
         </div>
 
         <div class="divider"></div>
