--- a/currently.html
+++ b/currently.html
@@ -470,9 +470,9 @@
             <button class="button full-video" onclick="showGallery('full-video')">Video in process</button>
         </div>
 
-        <!-- Research Summarized Button placed BELOW the buttons -->
-        <div class="expandable-box research-box" onclick="window.open('https://docs.google.com/document/d/1m19moXU8Wf83u4iNiWQjssmwbKQEqLfmTlxPQAyOgDk/edit?usp=sharing', '_blank')" style="margin-top: 10px; text-align: center;">
-            Research Summarized
+        <!-- Exhibition Info Box placed BELOW the buttons -->
+        <div class="info-box" onclick="window.open('https://docs.google.com/document/d/1m19moXU8Wf83u4iNiWQjssmwbKQEqLfmTlxPQAyOgDk/edit?usp=sharing', '_blank')" style="margin-top: 10px; text-align: center; background-color: #fff; border: 2px solid #cf77a4; border-radius: 5px; padding: 15px; cursor: pointer;">
+            This project will exhibit for two weeks in the Black Box Gallery at SJSU from November 10 to 21, 2025.
         </div>
     </div>
 
