--- a/about.html
+++ b/about.html
@@ -319,7 +319,7 @@
         <div class="custom-fields">
             <div class="custom-field" onclick="toggleCustomField('custom-field-1-content')">
                 <h3>SJSU MFA Digital Media</h3>
-                <p id="custom-field-1-content">2nd Semester</p>
+                <p id="custom-field-1-content">3rd Semester</p>
             </div>
             <div class="custom-field" onclick="toggleCustomField('custom-field-2-content')">
                 <h3>UCSC Film & Digital Media</h3>
