--- a/currently.html
+++ b/currently.html
@@ -455,7 +455,7 @@
           Components to the project ▼
           <div class="hidden-text" id="components-text">
             <ul style="list-style-type: none; padding-left: 0;">
-              <li>★ Fully edited 30-second video.
+              <li>★ Fully edited 33-second video.
                 <ul style="list-style-type: none; padding-left: 20px;">
                   <li>➜ Equipped with VFX, 3D animation, and immersive film techniques.</li>
                 </ul>
@@ -508,6 +508,20 @@
         </div>
 
         <!-- New Video Placeholder Frames -->
+                 <div class="gallery-item">
+            <iframe src="https://drive.google.com/file/d/1eph2annTC-Fzagp6LCjtU6UtALvc3Fei/preview" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Circuit</strong></p>
+                <p>The bright neon highlights, the deep-blue backdrop, and the swirling distortions create a sense of high-tech immersion, as if the viewer is peering into a living digital matrix.</p>
+           <p>3D modeled circuit board using Blender.</p>
+<p>Lights animated to flow through the circuit.</p>
+<p>Edited in After Effects using displacements.</pp>
+<p>Green “0's = distorted motion graphics. </p>
+</p>
+            </div>
+        </div>
         <div class="gallery-item">
             <iframe src="https://drive.google.com/file/d/1c4khlrv39Qfp5mrUcU2o4J1RWrIATGcv/preview" 
                 width="300" height="300" allowfullscreen>
@@ -539,20 +553,6 @@
             </div>
         </div>
 
-        <div class="gallery-item">
-            <iframe src="https://www.youtube.com/embed/9GxgujFhvas" 
-                width="300" height="300" allowfullscreen>
-            </iframe>
-            <div class="gallery-description">
-                <p><strong>Circuit</strong></p>
-                <p>The bright neon highlights, the deep-blue backdrop, and the swirling distortions create a sense of high-tech immersion, as if the viewer is peering into a living digital matrix.</p>
-           <p>3D modeled circuit board using Blender.</p>
-<p>Lights animated to flow through the circuit.</p>
-<p>Edited in After Effects using displacements.</pp>
-<p>Green “0's = distorted motion graphics. </p>
-</p>
-            </div>
-        </div>
     </div>
 
     <!-- Placeholder for Interactive Panel -->
@@ -600,7 +600,7 @@
                 </iframe>
                 <div class="gallery-description" style="font-size: 0.9rem;">
                     <p><strong>Song used: What'd I Say by asteria + d3r</strong></p>
-                    <p>:17-:47</p>
+                    <p>:14-:47</p>
                 </div>
             </div>
         </div>
@@ -673,5 +673,3 @@
 
 </body>
 </html>
-
-
