--- a/currently.html
+++ b/currently.html
@@ -518,6 +518,17 @@
           <p>An abstract, fleshy-pink simulation that suggests swirling, organic forms, as though we’re peering into magnified tissue or vaporous clouds.</p>
         </div>
       </div>
+      <!-- Sims: SoundCloud embed (full width at bottom of gallery) -->
+      <div style="width:100%;">
+        <div class="gallery-description" style="margin: 5px 0 8px 0;">
+          This is the song that will accompany the simulations at the gallery.
+        </div>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A319585550&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+        <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100; text-align:left;">
+          <a href="https://soundcloud.com/pcmus" title="PC Music ♩" target="_blank" style="color: #cccccc; text-decoration: none;">PC Music ♩</a> ·
+          <a href="https://soundcloud.com/pcmus/me4u" title="Danny L Harle - Me4U feat. Morrie" target="_blank" style="color: #cccccc; text-decoration: none;">Danny L Harle - Me4U feat. Morrie</a>
+        </div>
+      </div>
     </div>
 
     <!-- Right: Interactive Panel -->
