--- a/currently.html
+++ b/currently.html
@@ -498,7 +498,7 @@
       <div class="gallery-item">
         <iframe src="https://drive.google.com/file/d/1c4khlrv39Qfp5mrUcU2o4J1RWrIATGcv/preview" allowfullscreen></iframe>
         <div class="gallery-description">
-          <p><strong>Inside Sequence p1 (AE)</strong></p>
+          <p><strong>Inside_v1 (AE)</strong></p>
           <p>Using After Effects, I animated a shifting, interconnected “organic body”… It’s important to note that no, I didn’t use AI for any of these visuals. Made entirely in AE.</p>
         </div>
       </div>
@@ -506,7 +506,7 @@
       <div class="gallery-item">
         <iframe src="https://drive.google.com/file/d/1Qq5grgGN1mepIzF-80pDCablz4MaCJ6M/preview" allowfullscreen></iframe>
         <div class="gallery-description">
-          <p><strong>Inside Sequence p2 (AE)</strong></p>
+          <p><strong>Inside_v2 (AE)</strong></p>
           <p>AI doesn’t “see” the way we do; it predicts, interpolates, and generates. If human perception is mediated through our senses, AI’s perception is mediated through algorithms.</p>
         </div>
       </div>
@@ -514,10 +514,26 @@
       <div class="gallery-item">
         <iframe src="https://drive.google.com/file/d/164FlI3Y-JhjDk5dnZryHfpFHLsA1Mq6d/preview" allowfullscreen></iframe>
         <div class="gallery-description">
-          <p><strong>Inside Sequence p3 (AE)</strong></p>
+          <p><strong>Inside_v3 (AE)</strong></p>
           <p>An abstract, fleshy-pink simulation that suggests swirling, organic forms, as though we’re peering into magnified tissue or vaporous clouds.</p>
         </div>
       </div>
+      <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1n2niK8kNrZbce9Maz36YzMiGZpkByCUn/preview" allowfullscreen></iframe>
+        <div class="gallery-description">
+          <p><strong>Inside-us(AE)</strong></p>
+        </div>
+      </div>
+      <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1_E7ssnWu3cuHBN_6rB_qORpXKCWbgnnm/preview" allowfullscreen></iframe>
+        <div class="gallery-description">
+          <p><strong>Inside-us_v2(AE)</strong></p>
+        </div>
+      </div>
+
+
+
+
       <!-- Sims: SoundCloud embed (full width at bottom of gallery) -->
       <div style="width:100%;">
         <div class="gallery-description" style="margin: 5px 0 8px 0;">
