--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
             height: 70px; /* ust as needed: half the previous height */
             width: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             text-transform: uppercase;
             font-weight: bold;
             overflow: hidden;
+            padding: 0 20px;
         }
         
         .header h1 {
@@ -203,7 +204,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href="https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
+            <a href="https://damaris-guzman.github.io/portfolio/cv.html" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
