--- a/currently.html
+++ b/currently.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Every Day I See My Dream</title>
 
+  <link rel="stylesheet" href="styles.css">
   <style>
     /* Import DepartureMono font */
     @font-face {
@@ -390,7 +391,7 @@
     <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
     <nav class="nav-menu" aria-label="Main">
       <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
-      <a href="https://damaris-guzman.github.io/portfolio/about.html"><span class="icon">&#128100;</span> About me</a>
+      <a href="https://damaris-guzman.github.io/portfolio/CV.html"><span class="icon">&#128196;</span> CV</a>
       <a href="https://damaris-guzman.github.io/portfolio/currently.html"><span class="icon">&#128736;</span> Current Projects</a>
       <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
       <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
@@ -712,9 +713,13 @@
     document.addEventListener('DOMContentLoaded', function() {
       const hamburger = document.querySelector('.hamburger');
       const navMenu = document.querySelector('.nav-menu');
-      hamburger.addEventListener('click', function() {
-        const isOpen = navMenu.style.display === 'flex';
-        navMenu.style.display = isOpen ? 'none' : 'flex';
+      hamburger.addEventListener('click', () => {
+        if (navMenu.style.display === 'flex') {
+          navMenu.style.display = 'none';
+        } else {
+          navMenu.style.display = 'flex';
+          navMenu.style.flexDirection = 'column'; // ensure correct layout
+        }
       });
 
       // Initialize storyboard image in case user lands on full-video first
