--- a/CV.html
+++ b/CV.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Damaris Guzman</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="styles.css">
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const hamburger = document.querySelector('.hamburger');
@@ -226,8 +226,7 @@
                 <li>3D Animation (Blender)</li>
                 <li>Higher Education Teaching</li>
                 <li>Digital Fabrication (3D printing / Laser cutting / CNC)</li>
-                <li>Interactive Media Design (Touch Designer, p5.js)</li>
-                <li>Web Design (HTML, CSS)</li>
+                <li>Web Design (HTML, CSS, p5.js)</li>
                 <li>Cinematography + Videography</li>
                 <li>Photography (Studio + Outdoor, Portrait, Event)</li>
                 <li>Boom Operation</li>
